MacOS 图标大小调整 #10

--- a/.github/workflows/build_windows_app.yml
+++ b/.github/workflows/build_windows_app.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: aferchat
+          name: aidea
           path: build/windows/runner/Release
