添加 sqlite3.dll 到 Windows 目录，解决Windows版本打开没有反应问题

--- a/.github/workflows/build_windows_app.yml
+++ b/.github/workflows/build_windows_app.yml
@@ -15,10 +15,13 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2.10.0
         with:
-          flutter-version: "3.13.1"  # Set flutter version here
+          flutter-version: "3.13.2"  # Set flutter version here
 
       - name: Build Windows app
         run: flutter build windows --release
+
+      - name: Copy dependencies
+        run: copy .\windows\sqlite3.dll .\build\windows\runner\Release\
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
