--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
+# 应用正式发布时，需要同步修改 lib/helper/constant.dart 中的 VERSION 值
 version: 1.0.4+1
 
 environment:
