--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -174,6 +174,7 @@ flutter:
     - assets/weibo.png
     - assets/github.png
     - assets/x.png
+    - assets/xiaohongshu.png
 
   
   #   - images/a_dot_ham.jpeg
