--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,7 @@ dependencies:
   markdown: ^7.1.1
   fetch_api: 1.0.1
   web_socket_channel: ^2.4.0
+  flutter_initicon: ^3.0.0+1
   
 dev_dependencies:
   flutter_test:
