增加图生视频开屏简介

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -184,6 +184,7 @@ flutter:
     - assets/x.png
     - assets/xiaohongshu.png
     - assets/play.png
+    - assets/text-to-video.gif
 
   
   #   - images/a_dot_ham.jpeg
