--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,6 +124,7 @@ dependencies:
   media_kit: ^1.1.10
   media_kit_video: ^1.2.4
   media_kit_libs_video: ^1.0.4
+  path: ^1.8.3
   
 dev_dependencies:
   flutter_test:
