Windows 自动拷贝 sqlite3.dll 到 Release 目录

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -99,3 +99,8 @@ install(DIRECTORY "${PROJECT_BUILD_DIR}/${FLUTTER_ASSET_DIR_NAME}"
 install(FILES "${AOT_LIBRARY}" DESTINATION "${INSTALL_BUNDLE_DATA_DIR}"
   CONFIGURATIONS Profile;Release
   COMPONENT Runtime)
+
+# Install sqlite3.dll
+install(FILES "sqlite3.dll" DESTINATION "${INSTALL_BUNDLE_LIB_DIR}"
+  CONFIGURATIONS Profile;Release
+  COMPONENT Runtime)
