--- a/.github/workflows/build_windows_app.yml
+++ b/.github/workflows/build_windows_app.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Build Windows app
         run: flutter build windows --release
 
-      - name: Copy dependencies
-        run: copy .\windows\sqlite3.dll .\build\windows\runner\Release\
+      # - name: Copy dependencies
+      #   run: copy .\windows\sqlite3.dll .\build\windows\runner\Release\
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
