--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -138,6 +138,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.12.0"
   build_runner: ^2.3.3
+  msix: ^3.9.1
 
 flutter_icons:
   image_path: "assets/app.png"
@@ -219,3 +220,10 @@ flutter_native_splash:
 
 tobias:
   url_scheme: alipay2021004101661425
+
+msix_config:
+  display_name: AIdea
+  publisher_display_name: Shenzhen Gulu Artificial Intelligence Technology Co., Ltd.
+  identity_name: cc.aicode.flutter.askaide.askaide
+  logo_path: assets/app.png
+  execution_alias: AIdea
