基本功能初次跑通

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 # 应用正式发布时，需要同步修改 lib/helper/constant.dart 中的 VERSION 值
-version: 1.0.12+1
+version: 1.0.13+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -125,6 +125,7 @@ dependencies:
   media_kit_video: ^1.2.4
   media_kit_libs_video: ^1.0.4
   path: ^1.8.3
+  autoscale_tabbarview: ^1.0.2
   
 dev_dependencies:
   flutter_test:
