支持 Web 端使用 Stripe 支付

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,8 @@ dependencies:
   path: ^1.8.3
   autoscale_tabbarview: ^1.0.2
   flutter_stripe: ^10.1.0
+  flutter_stripe_web: ^5.1.0
+  stripe_js: ^3.4.0
   
 dev_dependencies:
   flutter_test:
