增加管理员查看支付历史记录功能

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -197,6 +197,7 @@ flutter:
     - assets/wechat-pay.png
     - assets/zhifubao.png
     - assets/stripe.png
+    - assets/apple.webp
 
   
   #   - images/a_dot_ham.jpeg
