--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -129,6 +129,7 @@ dependencies:
   flutter_stripe: ^10.1.1
   flutter_stripe_web: ^5.1.0
   stripe_js: ^3.4.0
+  qr_flutter: ^4.1.0
   
 dev_dependencies:
   flutter_test:
