--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,12 +61,13 @@ android {
     }
 
     signingConfigs {
-       release {
-           keyAlias keystoreProperties['keyAlias']
-           keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-           storePassword keystoreProperties['storePassword']
-       }
+        release {
+            // 使用前面解释的方法来配置你的密钥库（keystore）
+            storeFile file('./my-release-key.keystore') // 密钥库的文件路径
+            storePassword '123456' // 密钥库的密码
+            keyAlias 'alias_name' // 密钥别名
+            keyPassword '123456' // 密钥密码
+        }
    }
    buildTypes {
        release {
