--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -132,6 +132,7 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_displaymode: ^0.6.0
   image_cropper: ^5.0.1
+  image_picker: ^1.0.1
   
 dev_dependencies:
   flutter_test:
