--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,6 +130,7 @@ dependencies:
   flutter_stripe_web: ^5.1.0
   stripe_js: ^3.4.0
   qr_flutter: ^4.1.0
+  flutter_phoenix: ^1.1.1
   
 dev_dependencies:
   flutter_test:
