--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dependencies:
   photo_view: ^0.14.0
   flutter_image_compress: ^1.1.3
   isolate_image_compress: ^2.0.0
-  image: ^4.0.15
+  image: 4.1.7
   flutter_cache_manager: ^3.3.0
   file_saver:
     git:
