--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.18.0
+  intl: ^0.19.0
   flutter_highlight: ^0.7.0
   flutter_bloc: ^8.1.2
   path_provider: ^2.0.14
   dart_openai: 
     git: 
       url: https://github.com/mylxsw/openai.git
-  uuid: ^3.0.7
+  uuid: ^4.4.2
   settings_ui: ^2.0.2
   clipboard: ^0.1.3
   bot_toast: ^4.0.3
@@ -66,20 +66,19 @@ dependencies:
   isolate_image_compress: ^2.0.0
   image: 4.1.7
   flutter_cache_manager: ^3.3.0
-  file_saver:
+  file_saver: 
     git:
-      url: https://github.com/incrediblezayed/file_saver
-      ref: f7259f1d97558251a5c3f81847904b63c08b482b
-  image_gallery_saver: ^1.7.1
+      url: https://github.com/mylxsw/file_saver
+      ref: customized
+  image_gallery_saver: ^2.0.3
   tiktoken: ^1.0.3
   flutter_colorpicker: ^1.0.3
   singleton: ^0.0.2
   url_launcher: ^6.1.10
   crypto: ^3.0.2
-  dio: ^4.0.0
-  dio_http_cache_lts: ^0.4.1
-  dio_smart_retry: ^1.4.0
-  qiniu_flutter_sdk: ^0.4.0
+  dio: ^5.5.0
+  dio_smart_retry: ^6.0.0
+  qiniu_flutter_sdk: ^0.6.0
   sign_in_with_apple: ^4.3.0
   record: ^5.0.4
   animations: ^2.0.7
@@ -91,7 +90,7 @@ dependencies:
   quickalert:
     git:
       url: https://github.com/mylxsw/QuickAlert.git
-      ref: master
+      ref: customized
   sign_in_button: ^3.2.0
   animated_button_bar: ^1.0.0
   circular_countdown_timer: ^0.2.3
@@ -126,11 +125,12 @@ dependencies:
   media_kit_libs_video: ^1.0.4
   path: ^1.8.3
   autoscale_tabbarview: ^1.0.2
-  flutter_stripe: ^10.1.1
-  flutter_stripe_web: ^5.1.0
-  stripe_js: ^3.4.0
+  flutter_stripe: ^11.0.0
+  flutter_stripe_web: ^6.0.0
+  stripe_js: ^6.0.0
   qr_flutter: ^4.1.0
   flutter_phoenix: ^1.1.1
+  dio_cache_interceptor: ^3.5.0
   
 dev_dependencies:
   flutter_test:
