--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,6 +131,9 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_phoenix: ^1.1.1
   dio_cache_interceptor: ^3.5.0
+  camera: ^0.11.0+2
+  camerawesome: ^2.1.0
+  flutter_markdown_latex: ^0.3.4
   
 dev_dependencies:
   flutter_test:
