--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xms1024m -Xmx4096m
 android.useAndroidX=true
 android.enableJetifier=true
+kotlin.jvm.target.validation.mode=IGNORE
