--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,24 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    subprojects {
+        afterEvaluate { project ->
+            if (project.hasProperty('android')) {
+                project.android {
+                    if (namespace == null) {
+                        namespace project.group
+                    }
+                }
+            }
+
+            if (project.hasProperty("android")) {
+                project.android {
+                    compileSdkVersion = 34
+                }
+            }
+        }
+    }
 }
 
 rootProject.buildDir = "../build"
@@ -16,3 +34,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
