--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,7 +18,7 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "7.4.0" apply false
+    id "com.android.application" version '8.7.2' apply false
     id "org.jetbrains.kotlin.android" version "1.9.20" apply false
 }
 
