--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -140,6 +140,7 @@ dependencies:
   auto_size_text: ^3.0.0
   animated_list_plus: ^0.5.2
   lottie: ^3.2.0
+  bitsdojo_window: ^0.1.6
   
 dev_dependencies:
   flutter_test:
